--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -1,26 +1,3 @@
-/* Custom CSS for the card */
-.card-link-overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0); /* Transparent background */
-    transition: background-color 0.3s;
-  }
-  
-  /* Change background color on hover */
-  .card:hover .card-link-overlay {
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background on hover */
-  }
-  
-  /* Center the link text vertically and horizontally */
-  .card-link-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff; /* Link text color */
-  }
-  
+.card-body{
+    margin-top: 350px;
+}
